--- a/selector/style.css
+++ b/selector/style.css
@@ -116,7 +116,7 @@ li>a {
 }
 
 #quote {
-  background: -webkit-image-set( url('http://placehold.it/1600x900') 1x, url('http://placehold.it/3200x1800') 2x);
+  background: -webkit-image-set( url('https://via.placeholder.com/1600x900') 1x, url('https://via.placeholder.com/3200x1800') 2x);
   height: 400px;
   background-repeat: no-repeat;
   background-position: center;
@@ -125,7 +125,7 @@ li>a {
 }
 
 #contact {
-  background: -webkit-image-set( url('http://placehold.it/1600x900') 1x, url('http://placehold.it/3200x1800') 2x);
+  background: -webkit-image-set( url('https://via.placeholder.com/1600x900') 1x, url('https://via.placeholder.com/3200x1800') 2x);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
